--- a/ObjectTextify/ObjectTextify.csproj
+++ b/ObjectTextify/ObjectTextify.csproj
@@ -8,13 +8,15 @@
     <Authors>Talisson Lima</Authors>
     <Description>A library for serializing objects into plain text with custom formatting.</Description>
     <PackageTags>c#, serialization, text-formatting, text-serialization, object-to-text, report-generation, pretty-print, table-serialization, formatted-output, object-rendering, text-output</PackageTags>
-    <PackageLicenseUrl>https://github.com/TalissonLima/ObjectTextify/blob/main/LICENSE</PackageLicenseUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/TalissonLima/ObjectTextify</PackageProjectUrl>
     <RepositoryUrl>https://github.com/TalissonLima/ObjectTextify</RepositoryUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <None Include="..\README.md" Pack="true" PackagePath="\"/>
+    <None Include="..\LICENSE" Pack="true" PackagePath="\"/>
   </ItemGroup>
 
 </Project>
